# routez

./: .gitignore  .gitmodules  Makefile  README  README.md  TODO  acinclude.m4  address.cc  address.cc.in  address.h  address_suffixes.cc.in  buildout.cfg  config.mk.in  configure.ac  createdb.py  creategeodb.py  creategraph.py  gen-address-cc.pl  gen-address.pl  geocode.cc  geocoder.cc  geocoder.h  geoparser.cc  geoparser.h  geoparser.rl.in  getcoords.py  graph.py  install.mk  latlng.cc  local.cfg.tmpl  manage.py  neocoder.i  openrp.js  openrp.py  osm.py  routez.py  routezgraph.py  settings.py  suffix-subst.pl  testgraph.cc  (+8 more)
etc/templates/: copyvar.in  create-markers.in  createall.in  createdb.in  creategeodb.in  creategraph.in  ldwrapper.in  local_settings.py.in  restart-routez.in  routez-nginx.conf.in  settings.py.in
geocoder/: geocoder.py  models.py  parser.py  tests.py
include/: address.h  geocoder.h  geoparser.h
lib/: address.cc.in  geocoder.cc  geoparser.cc.in
routez/: README  createdb.py  settings.py
routez/geocoder/: geocoder.py
src/: setup.py
stop/: models.py  views.py
t/: geoparser.t.cc
templates/: 404.html  about.html  django-libroutez.in  footer.html  header-iphone.html  header.html  help.html  index.html  iphone.html  privacy.html  python-libroutez.in  python.in  routeplan-form.html  routez.in  settings.py.in
tests/: geocode.cc
travel/: __init__.py  models.py  views.py
utils/: creategeodb.py  mappings.py.in
web_content/: about.html  footer.html  header-iphone.html  header.html  index.html  iphone.html  openrp.js  style.css
(+75 files in other folders)
